--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <title> Matthew's Portfolio </title>
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="./styles.css">
 
 <body>
   <header>
