--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <title> Matthew's Portfolio </title>
 <link rel="stylesheet" href="./styles.css">
 
-<body>
+<body data-gr-c-s-loaded="true" style="background-color: #161616;">
   <header>
   <h1>About me</h1>
   </header>
