--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
   </header>
 
   <div class="wrapper intro">
-  
+  <p><a id="gettingstartedlink" href="#getting-started" style="color: #ccca46;"></a></p>
+
+  <section id="getting-started" class-"section">
 </body>
