--- a/experience/index.html
+++ b/experience/index.html
@@ -20,11 +20,13 @@
 <body>
     <main>
         <h1 class="rainbow-but-im-not-gay">punctuations</h1>
-        <p>the undetermined programmer.</p>
+        <p>technologies i have used for my ideas</p>
         <ul class="fa-ul">
-            <li><span class="fa-li"><i class="fas fa-briefcase"></i></span><a href="experience">languages</a></li>
-            <li><span class="fa-li"><i class="fas fa-laptop-code"></i></span><a href="projects">projects</a></li>
-            <li><span class="fa-li"><i class="fas fa-user"></i></span><a href="contact">contacts/socials</a></li>
+            <li><span class="fa-li"><i class="fas fa-arrow-left"></i></span><a href="..">go back</a></li>
+            <li><span class="fa-li"><i class="fab fa-python"></i></span><a href="#">Python (intermediate)</a></li>
+            <li><span class="fa-li"><i class="fab fa-js"></i></span><a href="#">DOS (intermediate)</a></li>
+            <li><span class="fa-li"><i class="fab fa-html5"></i></span><a href="#">HTML (advanced intermediate)</a></li>
+            <li><span class="fa-li"><i class="fab fa-linux"></i></span><a href="#">Windows (expert)</a></li>
         </ul>
     </main>
 </body>
