--- a/projects/index.html
+++ b/projects/index.html
@@ -20,11 +20,19 @@
 <body>
     <main>
         <h1 class="rainbow-but-im-not-gay">punctuations</h1>
-        <p>the undetermined programmer.</p>
+        <p>see my projects here</p>
         <ul class="fa-ul">
-            <li><span class="fa-li"><i class="fas fa-briefcase"></i></span><a href="experience">languages</a></li>
-            <li><span class="fa-li"><i class="fas fa-laptop-code"></i></span><a href="projects">projects</a></li>
-            <li><span class="fa-li"><i class="fas fa-user"></i></span><a href="contact">contacts/socials</a></li>
+            <li><span class="fa-li"><i class="fas fa-arrow-left"></i></span><a href="..">go back</a></li>
+            <li><span class="fa-li"><i class="fab fa-discord"></i></span><a href="https://phantombot.tk">utile (team project)</a>
+            <li><span class="fa-li"><i class="fab fa-mastodon"></i></span><a
+                    href="https://miscord.utile.cf">miscord (team project)</a></li>
+            <li><span class="fa-li"><i class="fas fa-globe"></i></span><a
+                    href="https://gitlab.com/wontfix/wontfix.gitlab.io">this website</a>
+            <li><span class="fa-li"><i class="fab fa-gitlab"></i></span><a href="https://gitlab.com/wontfix">more on
+                    gitlab</a></li>
+            <li><span class="fa-li"><i class="fab fa-github"></i></span><a href="https://github.com/tilda">also on
+                    github</a></li>
+
         </ul>
     </main>
 </body>
