--- a/contact/index.html
+++ b/contact/index.html
@@ -19,8 +19,8 @@
 
 <body>
     <main>
-      <h1 class="rainbow-but-im-not-gay">punctuations</h1>
-        <p>you want to talk wo me? reach me here.</p>
+      <h1 class="typewriter">punctuations</h1>
+        <p>you want to talk to me? reach me here.</p>
         <ul class="fa-ul">
             <li><span class="fa-li"><i class="fas fa-arrow-left"></i></span><a href="..">go back</a>
             <li><span class="fa-li"><i class="fas fa-envelope"></i></span><a href="mailto:semi@punctuations.cf">semi@punctuations.cf</a>
