--- a/experience/index.html
+++ b/experience/index.html
@@ -13,20 +13,21 @@
     <meta name="theme-color" content="#292e3a" />
     <title>infinite space</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700" rel="stylesheet">
-    <link href="css/stylesheet.css" rel="stylesheet">
+    <link href="../css/stylesheet.css" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.10.1/css/all.css" rel="stylesheet">
 </head>
 
 <body>
     <main>
-        <h1 class="rainbow-but-im-not-gay">punctuations</h1>
-        <p>technologies i have used for my ideas</p>
+        <h1 class="typewriter">punctuations</h1>
+        <p>languages</p>
         <ul class="fa-ul">
             <li><span class="fa-li"><i class="fas fa-arrow-left"></i></span><a href="..">go back</a></li>
-            <li><span class="fa-li"><i class="fab fa-python"></i></span><a href="#">Python (intermediate)</a></li>
-            <li><span class="fa-li"><i class="fab fa-js"></i></span><a href="#">DOS (intermediate)</a></li>
-            <li><span class="fa-li"><i class="fab fa-html5"></i></span><a href="#">HTML (advanced intermediate)</a></li>
-            <li><span class="fa-li"><i class="fab fa-linux"></i></span><a href="#">Windows (expert)</a></li>
+            <li><span class="fa-li"><i class="fab fa-python"></i></span><a href="https://docs.python.org/3/">Python (intermediate)</a></li>
+            <li><span class="fa-li"><i class="fab fa-mixcloud"></i></span><a href="https://www.lifewire.com/dos-commands-4070427">DOS (intermediate)</a></li>
+            <li><span class="fa-li"><i class="fab fa-html5"></i></span><a href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5">HTML (advanced intermediate)</a></li>
+            <li><span class="fa-li"><i class="fab fa-windows"></i></span><a href="https://docs.microsoft.com/en-us/windows/">Windows (expert)</a></li>
+            <li><span class="fa li"><i class="fab fa-connectdevelop"></i></span><a href="https://developer.mozilla.org/en-US/docs/Web/CSS">CSS (intermediate)</a>
         </ul>
     </main>
 </body>
