--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <main>
-        <h1 class="rainbow-but-im-not-gay">punctuations</h1>
+        <h1 class="typewriter">punctuation</h1>
         <p>the undetermined programmer.</p>
         <ul class="fa-ul">
             <li><span class="fa-li"><i class="fas fa-briefcase"></i></span><a href="experience">languages</a></li>
