--- a/projects/index.html
+++ b/projects/index.html
@@ -13,25 +13,23 @@
     <meta name="theme-color" content="#292e3a" />
     <title>infinite space</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700" rel="stylesheet">
-    <link href="css/stylesheet.css" rel="stylesheet">
+    <link href="../css/stylesheet.css" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.10.1/css/all.css" rel="stylesheet">
 </head>
 
 <body>
     <main>
-        <h1 class="rainbow-but-im-not-gay">punctuations</h1>
+        <h1 class="typewriter">punctuations</h1>
         <p>see my projects here</p>
         <ul class="fa-ul">
             <li><span class="fa-li"><i class="fas fa-arrow-left"></i></span><a href="..">go back</a></li>
             <li><span class="fa-li"><i class="fab fa-discord"></i></span><a href="https://phantombot.tk">utile (team project)</a>
-            <li><span class="fa-li"><i class="fab fa-mastodon"></i></span><a
+            <li><span class="fa-li"><i class="fab fa-discord"></i></span><a
                     href="https://miscord.utile.cf">miscord (team project)</a></li>
             <li><span class="fa-li"><i class="fas fa-globe"></i></span><a
-                    href="https://gitlab.com/wontfix/wontfix.gitlab.io">this website</a>
-            <li><span class="fa-li"><i class="fab fa-gitlab"></i></span><a href="https://gitlab.com/wontfix">more on
-                    gitlab</a></li>
-            <li><span class="fa-li"><i class="fab fa-github"></i></span><a href="https://github.com/tilda">also on
-                    github</a></li>
+                    href="https://github.com/punctuations/juststop">this very website</a>
+            <li><span class="fa-li"><i class="fab fa-github"></i></span><a href="https://github.com/punctuations">tons of
+                    github projects</a></li>
 
         </ul>
     </main>
