--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <h1 class="typewriter">punctuation</h1>
         <p>the undetermined programmer.</p>
         <ul class="fa-ul">
-            <li><span class="fa-li"><i class="fas fa-briefcase"></i></span><a href="experience">languages</a></li>
-            <li><span class="fa-li"><i class="fas fa-laptop-code"></i></span><a href="projects">projects</a></li>
+            <li><span class="fa-li"><i class="fas fa-laptop-code"></i></span><a href="experience">languages</a></li>
+            <li><span class="fa-li"><i class="fas fa-briefcase"></i></span><a href="projects">projects</a></li>
             <li><span class="fa-li"><i class="fas fa-user"></i></span><a href="contact">contacts/socials</a></li>
         </ul>
     </main>
