--- a/experience/index.html
+++ b/experience/index.html
@@ -27,7 +27,7 @@
             <li><span class="fa-li"><i class="fab fa-mixcloud"></i></span><a href="https://www.lifewire.com/dos-commands-4070427">DOS (intermediate)</a></li>
             <li><span class="fa-li"><i class="fab fa-html5"></i></span><a href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5">HTML (advanced intermediate)</a></li>
             <li><span class="fa-li"><i class="fab fa-windows"></i></span><a href="https://docs.microsoft.com/en-us/windows/">Windows (expert)</a></li>
-            <li><span class="fa li"><i class="fab fa-codepen"></i></span><a href="https://developer.mozilla.org/en-US/docs/Web/CSS">CSS (intermediate)</a>
+            <li><span class="fa li"><i class="fab fa-codepen"></i></span><a href="https://developer.mozilla.org/en-US/docs/Web/CSS">CSS (intermediate)</a></li>
         </ul>
     </main>
 </body>
