--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <li><span class="fa-li"><i class="fas fa-laptop-code"></i></span><a href="experience">languages</a></li>
             <li><span class="fa-li"><i class="fas fa-briefcase"></i></span><a href="projects">projects</a></li>
             <li><span class="fa-li"><i class="fas fa-user"></i></span><a href="contact">contacts/socials</a></li>
+            <li><span class="fa-li"><i class="fas fa-info"></i></span><a href="about">info</a></li>
         </ul>
     </main>
 </body>
