changed to bit.ly link

--- a/about/index.html
+++ b/about/index.html
@@ -25,7 +25,7 @@
             <li><span class="fa-li"><i class="fas fa-arrow-left"></i></span><a href="..">go back</a>
             <li><span class="fa-li"><i class="fas fa-music"></i></span><a href="https://www.youtube.com/watch?v=yXQViqx6GMY" alt="change my mind.">Christmas music is good all year 'round</a>
             <li><span class="fa-li"><i class="fas fa-calendar"></i></span><a
-                    href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" alt="awaiting your simple click.">time and date this was made</a></li>
+                    href="https://bit.ly/2O3QEnd" alt="awaiting your simple click.">time and date this was made</a></li>
             <li><span class="fa-li"><i class="fas fa-copyright"></i></span><a
                     href="http://creativecommons.org/licenses/by-nc-sa/4.0/">This work is licensed under creative commons</a></li>
         </ul>
