--- a/experience/index.html
+++ b/experience/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <main>
-        <h1 class="typewriter">punctuations</h1>
+        <h1 class="typewriter">punctuation</h1>
         <p>languages</p>
         <ul class="fa-ul">
             <li><span class="fa-li"><i class="fas fa-arrow-left"></i></span><a href="..">go back</a></li>
