Update and rename 404page.html to 404.html

--- a/404.html
+++ b/404.html
@@ -1,4 +1,7 @@
-﻿<!-- Woah, this is a really cool place huh? Mr. Inspect element (or miss, I don't discriminate)-->
+---
+permalink: /404.html
+---
+<!-- Woah, this is a really cool place huh? Mr. Inspect element (or miss, I don't discriminate)-->
 <!DOCTYPE html>
 <html lang="en">
 
