--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <meta name="author" content="<insert dad joke here>">
     <meta name="theme-color" content="#292e3a" />
     <title>infinite space</title>
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700" rel="stylesheet">
     <link href="css/stylesheet.css" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.10.1/css/all.css" rel="stylesheet">
