--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta name="description" content="maaatt">
     <meta property="og:title" content="( ͡° ͜ʖ ͡°)">
-    <meta property="og:description" content="punctuations.">
+    <meta property="og:description" content="home sweet home.">
     <meta name="twitter:card" content="summary" />
     <meta name="author" content="<insert dad joke here>">
     <meta name="theme-color" content="#292e3a" />
