--- a/404.html
+++ b/404.html
@@ -9,8 +9,8 @@ permalink: /404.html
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta name="description" content="maaatt">
-    <meta property="og:title" content="( ͡° ͜ʖ ͡°)">
-    <meta property="og:description" content="punctuations.">
+    <meta property="og:title" content="(͠≖ ͜ʖ͠≖)">
+    <meta property="og:description" content="ah yes 404.">
     <meta name="twitter:card" content="summary" />
     <meta name="author" content="<insert dad joke here>">
     <meta name="theme-color" content="#292e3a" />
