--- a/projects/index.html
+++ b/projects/index.html
@@ -3,8 +3,8 @@
 <html lang="en">
 
 <head>
-    <link rel="shortcut icon" href=".../icon/favicon.ico">
-    <link rel="icon" href=".../icon/favicon.ico">
+    <link rel="shortcut icon" href="./icon/favicon.ico">
+    <link rel="icon" href="./icon/favicon.ico">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta name="description" content="maaatt">
