--- a/experience/index.html
+++ b/experience/index.html
@@ -26,7 +26,7 @@
         <ul class="fa-ul">
             <li><span class="fa-li"><i class="fas fa-arrow-left"></i></span><a href="..">go back</a></li>
             <li><span class="fa-li"><i class="fab fa-python"></i></span><a href="https://docs.python.org/3/">Python (intermediate)</a></li>
-            <li><span class="fa-li"><i class="fab fa-mixcloud"></i></span><a href="https://www.lifewire.com/dos-commands-4070427">DOS (intermediate)</a></li>
+            <li><span class="fa-li"><i class="fab fa-mixcloud"></i></span><a href="https://www.lifewire.com/dos-commands-4070427">MS-DOS (intermediate)</a></li>
             <li><span class="fa-li"><i class="fab fa-html5"></i></span><a href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5">HTML (advanced intermediate)</a></li>
             <li><span class="fa-li"><i class="fab fa-windows"></i></span><a href="https://docs.microsoft.com/en-us/windows/">Windows (expert)</a></li>
             <li><span class="fa-li"><i class="fab fa-grav"></i></span><a href="https://developer.mozilla.org/en-US/docs/Web/CSS">CSS (advanced intermediate)</a></li>
