--- a/404.html
+++ b/404.html
@@ -24,11 +24,11 @@ permalink: /404.html
 
 <body>
     <main>
-        <h1 class="typewriter" align="center">punctuation</h1>
+        <h1 class="typewriter" align="center">dead end</h1>
         <p align="center">the confused programmer?</p>
         <ul class="fa-ul">
             <li><span class="fa-li"><i class="fas fa-arrow-left"></i></span><a href="index.html">go back</a></li>
-            <p align="center">Uhm, I don't know how you got here, but you did. 404? Looks like the requested denstination is not avaliable or does not exist.</p>
+            <p align="center">Sorry buffy but it looks like you hit a dead end, I don't know how you got here, but you did. 404? Looks like the requested denstination is not avaliable or does not exist.</p>
         </ul>
     </main>
 </body>
