--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="icon/favicon.ico">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <meta name="description" content="jaaack">
+    <meta name="description" content="maaatt">
     <meta property="og:title" content="( ͡° ͜ʖ ͡°)">
     <meta property="og:description" content="home sweet home.">
     <meta name="twitter:card" content="summary" />
