--- a/hyphin.html
+++ b/hyphin.html
@@ -24,7 +24,7 @@
         <ul class="fa-ul">
             <li><span class="fa-li"><i class="fas fa-arrow-left"></i></span><a href="index.html">go back</a></li>
             <p align="center">Okay, hyphine KEKW I need the vip to sustain my life. Hand it over bucko.</p>
-            <br><p align="center">please.</p>
+            <br><p align="center">please. nad chat is mean :(</p>
         </ul>
     </main>
 </body>
