--- a/hyphin.html
+++ b/hyphin.html
@@ -19,12 +19,12 @@
 
 <body>
     <main>
-        <h1 class="typewriter">punctuation</h1>
-        <p>the programmer that just wants vip.</p>
+        <h1 class="typewriter">:( halfcolon</h1>
+        <p>the programmer that just wants vip. :(</p>
         <ul class="fa-ul">
             <li><span class="fa-li"><i class="fas fa-arrow-left"></i></span><a href="index.html">go back</a></li>
-            <p align="center">Okay, hyphine KEKW I need the vip to sustain my life. Hand it over bucko.</p>
-            <br><p align="center">please. nad chat is mean :(</p>
+            <p align="center">Okay, hyphine OMEGALUL I need the vip to sustain my life. Hand it over bucko.</p>
+            <br><p align="center">please. and chat is mean :(</p>
         </ul>
     </main>
 </body>
