--- a/contact/index.html
+++ b/contact/index.html
@@ -25,7 +25,7 @@
         <p>you want to talk to me? reach me here.</p>
         <ul class="fa-ul">
             <li><span class="fa-li"><i class="fas fa-arrow-left"></i></span><a href="..">go back</a>
-            <li><span class="fa-li"><i class="fas fa-envelope"></i></span><a href="mailto:semi@punctuations.cf">semi@punctuations.cf</a>
+            <li><span class="fa-li"><i class="fas fa-envelope"></i></span><a href="mailto:semi@programmer.net">semi@programmer.net</a>
             <li><span class="fa-li"><i class="fab fa-discord"></i></span><a
                     href="https://discord.gg/wk5xM7F">YetAnotherMatt#8773</a></li>
             <li><span class="fa-li"><i class="fab fa-reddit"></i></span><a
