--- a/dime/index.html
+++ b/dime/index.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta name="description" content="maaatt">
-    <meta property="og:title" content="( ?° ?? ?°)">
+    <meta property="og:title" content="( ?Â° ?? ?Â°)">
     <meta property="og:description" content="dime?">
     <meta name="twitter:card" content="summary" />
     <meta name="author" content="<insert dad joke here>">
@@ -21,7 +21,7 @@
 
 <body>
     <main>
-        <h1 class="rainbow">dime?</h1>
+        <h1 class="rainbow-text">dime?</h1>
         <p>the undetermined programmer.</p>
         <ul class="fa-ul">
             <li><span class="fa-li"><i class="fas fa-arrow-left"></i></span><a href="..">go back</a>
