--- a/dime/index.html
+++ b/dime/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <main>
-        <h1 class="rainbow-text">dime?</h1>
+        <h1 class="colour-text">dime?</h1>
         <p>the undetermined programmer.</p>
         <ul class="fa-ul">
             <li><span class="fa-li"><i class="fas fa-arrow-left"></i></span><a href="..">go back</a>
