--- a/404.html
+++ b/404.html
@@ -24,7 +24,7 @@ permalink: /404.html
 
 <body>
     <main>
-        <h1 class="typewriter" align="center">dead end</h1>
+        <h1 class="typewriter" align="center">just stop</h1>
         <p align="center">the confused programmer?</p>
         <ul class="fa-ul">
             <li><span class="fa-li"><i class="fas fa-arrow-left"></i></span><a href="index.html">go back</a></li>
