added dropdown to projects

--- a/projects/index.html
+++ b/projects/index.html
@@ -15,6 +15,7 @@
     <meta name="theme-color" content="#292e3a" />
     <title>infinite space</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700" rel="stylesheet">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="../css/stylesheet.css" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.10.1/css/all.css" rel="stylesheet">
 </head>
@@ -25,16 +26,31 @@
         <p>see my projects here</p>
         <ul class="fa-ul">
             <li><span class="fa-li"><i class="fas fa-arrow-left"></i></span><a href="..">go back</a></li>
-            <li><span class="fa-li"><i class="fab fa-discord"></i></span><a href="https://phantombot.tk">utile (team project)</a>
-            <li><span class="fa-li"><i class="fab fa-discord"></i></span><a
-                    href="https://miscord.utile.cf">miscord (team project)</a></li>
+            <li><span class="fa-li"><i class="fab fa-discord"></i></span><a data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">utile (team project)</a>
+              <div class="collapse" id="collapseExample" background-color="#212530">
+                <div class="card card-body">
+                  The Utile project is a discord bot made by<a href="https://github.com/punctuations">me</a>,<a href="https://github.com/iAlex11">alex</a>, and<a href="https://github.com/tilda">tilda</a>.
+                </div>
+              </div>
+            <li><span class="fa-li"><i class="fab fa-discord"></i></span><a data-toggle="collapse" href="#collapseExample1" role="button" aria-expanded="false" aria-controls="collapseExample1">miscord (team project)</a></li>
+            <div class="collapse" id="collapseExample1" background-color="#212530">
+              <div class="card card-body">
+                The Miscord Project is a project that was edeveloped during discord's <a href="https://blog.discordapp.com/discord-community-hack-week-category-winners-bd0364360f92">Hack Week</a>, which is the reason we made this other discord bot, Miscord has lots of features which you can see <a href="https://miscord.utile.cf/">here</a>.
+              </div>
+            </div>
             <li><span class="fa-li"><i class="fas fa-globe"></i></span><a
                     href="https://github.com/punctuations/juststop">this very website</a>
-            <li><span class="fa-li"><i class="fab fa-github"></i></span><a href="https://github.com/punctuations">tons of
-                    github projects</a></li>
-
+            <li><span class="fa-li"><i class="fab fa-github"></i></span><a data-toggle="collapse" href="#collapseExample2" role="button" aria-expanded="false" aria-controls="collapseExample2">tons of github projects</a></li>
+            <div class="collapse" id="collapseExample2" background-color="#212530">
+              <div class="card card-body">
+                Using github I have tons of my projects open source and easily avaliabe to me, I have most if not all of my projects hosted <a href="https://github.com/punctuations/">there</a>.
+              </div>
+            </div>
         </ul>
     </main>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 
 </html>
