--- a/experience/index.html
+++ b/experience/index.html
@@ -29,19 +29,19 @@
             <li><span class="fa-li"><i class="fab fa-python"></i></span><a data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">Python (intermediate)</a></li>
               <div class="collapse" id="collapseExample" background-color="#212530">
                 <div class="card card-body">
-                  Using python I have made tons of projects, an example would be <a href="#">Utile</a> the discord bot, and a few others you can see <a href="https://github.com/punctuations">here.</a>
+                  Using python I have made tons of projects, an example would be <a href="#">Utile</a> the discord bot, and a few others you can see <a href="https://github.com/punctuations" target="_blank">here.</a>
                 </div>
               </div>
             <li><span class="fa-li"><i class="fab fa-mixcloud"></i></span><a data-toggle="collapse" href="#collapseExample1" role="button" aria-expanded="false" aria-controls="collapseExample1">MS-DOS (intermediate)</a></li>
               <div class="collapse" id="collapseExample1" background-color="#212530">
                 <div class="card card-body">
-                  Using MS-DOS I can work my way around windows, I don't really know what else to say. The documentation is <a href="https://docs.microsoft.com/en-us/windows-server/administration/windows-commands/windows-commands">here</a>.</a>
+                  Using MS-DOS I can work my way around windows, I don't really know what else to say. The documentation is <a href="https://docs.microsoft.com/en-us/windows-server/administration/windows-commands/windows-commands" target="_blank">here</a>.</a>
                 </div>
               </div>
             <li><span class="fa-li"><i class="fab fa-html5"></i></span><a data-toggle="collapse" href="#collapseExample2" role="button" aria-expanded="false" aria-controls="collapseExample2">HTML (advanced intermediate)</a></li>
               <div class="collapse" id="collapseExample2" background-color="#212530">
                 <div class="card card-body">
-                  Using HTML I was able to basically layout what I'd call the framework of the website with all the text and things. An example of things I've done with this would be on <a href="https://github.com/punctuations">Github</a>.
+                  Using HTML I was able to basically layout what I'd call the framework of the website with all the text and things. An example of things I've done with this would be on <a href="https://github.com/punctuations" target="_blank">Github</a>.
                 </div>
               </div>
             <li><span class="fa-li"><i class="fab fa-windows"></i></span><a data-toggle="collapse" href="#collapseExample3" role="button" aria-expanded="false" aria-controls="collapseExample3">Windows (expert)</a></li>
@@ -53,7 +53,7 @@
             <li><span class="fa-li"><i class="fab fa-grav"></i></span><a data-toggle="collapse" href="#collapseExample4" role="button" aria-expanded="false" aria-controls="collapseExample4">CSS (advanced intermediate)</a></li>
               <div class="collapse" id="collapseExample4" background-color="#212530">
                 <div class="card card-body">
-                  CSS is like the fancy wallpaper added to a building where html is the blank wall and framework, CSS is what makes it look fancy nad nice. To see some of my work with CSS it'd be on <a href="https://github.com/punctuations">Github</a>.
+                  CSS is like the fancy wallpaper added to a building where html is the blank wall and framework, CSS is what makes it look fancy nad nice. To see some of my work with CSS it'd be on <a href="https://github.com/punctuations" target="_blank">Github</a>.
                 </div>
               </div>
         </ul>
