--- a/projects/index.html
+++ b/projects/index.html
@@ -29,21 +29,21 @@
             <li><span class="fa-li"><i class="fab fa-discord"></i></span><a data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">utile (team project)</a>
               <div class="collapse" id="collapseExample" background-color="#212530">
                 <div class="card card-body">
-                  The Utile project is a discord bot made by<a href="https://github.com/punctuations">me</a>,<a href="https://github.com/iAlex11">alex</a>, and<a href="https://github.com/tilda">tilda</a>.
+                  The Utile project is a discord bot made by<a href="https://github.com/punctuations" target="_blank">me</a>,<a href="https://github.com/iAlex11" target="_blank">alex</a>, and<a href="https://github.com/tilda" target="_blank">tilda</a>.
                 </div>
               </div>
             <li><span class="fa-li"><i class="fab fa-discord"></i></span><a data-toggle="collapse" href="#collapseExample1" role="button" aria-expanded="false" aria-controls="collapseExample1">miscord (team project)</a></li>
             <div class="collapse" id="collapseExample1" background-color="#212530">
               <div class="card card-body">
-                The Miscord Project is a project that was edeveloped during discord's <a href="https://blog.discordapp.com/discord-community-hack-week-category-winners-bd0364360f92">Hack Week</a>, which is the reason we made this other discord bot, Miscord has lots of features which you can see <a href="https://miscord.utile.cf/">here</a>.
+                The Miscord Project is a project that was edeveloped during discord's <a href="https://blog.discordapp.com/discord-community-hack-week-category-winners-bd0364360f92" target="_blank">Hack Week</a>, which is the reason we made this other discord bot, Miscord has lots of features which you can see <a href="https://miscord.utile.cf/">here</a>.
               </div>
             </div>
             <li><span class="fa-li"><i class="fas fa-globe"></i></span><a
-                    href="https://github.com/punctuations/juststop">this very website</a>
+                    href="https://github.com/punctuations/juststop" target="_blank">this very website</a>
             <li><span class="fa-li"><i class="fab fa-github"></i></span><a data-toggle="collapse" href="#collapseExample2" role="button" aria-expanded="false" aria-controls="collapseExample2">tons of github projects</a></li>
             <div class="collapse" id="collapseExample2" background-color="#212530">
               <div class="card card-body">
-                Using github I have tons of my projects open source and easily avaliabe to me, I have most if not all of my projects hosted <a href="https://github.com/punctuations/">there</a>.
+                Using github I have tons of my projects open source and easily avaliabe to me, I have most if not all of my projects hosted <a href="https://github.com/punctuations/" target="_blank">there</a>.
               </div>
             </div>
         </ul>
