--- a/about/index.html
+++ b/about/index.html
@@ -25,11 +25,11 @@
         <p>hey, you seem pretty cool, here's some info.</p>
         <ul class="fa-ul">
             <li><span class="fa-li"><i class="fas fa-arrow-left"></i></span><a href="..">go back</a>
-            <li><span class="fa-li"><i class="fas fa-music"></i></span><a href="https://www.youtube.com/watch?v=yXQViqx6GMY" alt="change my mind.">Christmas music is good all year 'round</a>
+            <li><span class="fa-li"><i class="fas fa-music"></i></span><a href="https://www.youtube.com/watch?v=yXQViqx6GMY" alt="change my mind." target="_blank">Christmas music is good all year 'round</a>
             <li><span class="fa-li"><i class="fas fa-calendar"></i></span><a
-                    href="https://bit.ly/2O3QEnd" alt="awaiting your simple click.">time and date this was made</a></li>
+                    href="https://bit.ly/2O3QEnd" alt="awaiting your simple click." target="_blank">time and date this was made</a></li>
             <li><span class="fa-li"><i class="fas fa-copyright"></i></span><a
-                    href="http://creativecommons.org/licenses/by-nc-sa/4.0/">This work is licensed under creative commons</a></li>
+                    href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">This work is licensed under creative commons</a></li>
         </ul>
     </main>
 </body>
