--- a/experience/index.html
+++ b/experience/index.html
@@ -32,7 +32,7 @@
                   Using python I have made tons of projects, an example would be <a href="#">Utile</a> the discord bot, and a few others you can see <a href="https://github.com/punctuations" target="_blank">here.</a>
                 </div>
               </div>
-            <li><span class="fa-li"><i class="fab fa-mixcloud"></i></span><a data-toggle="collapse" href="#collapseExample1" role="button" aria-expanded="false" aria-controls="collapseExample1">MS-DOS (intermediate)</a></li>
+            <li><span class="fa-li"><i class="fas fa-align-left"></i></span><a data-toggle="collapse" href="#collapseExample1" role="button" aria-expanded="false" aria-controls="collapseExample1">MS-DOS (intermediate)</a></li>
               <div class="collapse" id="collapseExample1" background-color="#212530">
                 <div class="card card-body">
                   Using MS-DOS I can work my way around windows, I don't really know what else to say. The documentation is <a href="https://docs.microsoft.com/en-us/windows-server/administration/windows-commands/windows-commands" target="_blank">here</a>.</a>
@@ -50,13 +50,14 @@
                   I make mostly everything I have using windows, it is my main OS and from using it so much I have learned my way around.
                 </div>
               </div>
-            <li><span class="fa-li"><i class="fab fa-grav"></i></span><a data-toggle="collapse" href="#collapseExample4" role="button" aria-expanded="false" aria-controls="collapseExample4">CSS (advanced intermediate)</a></li>
+            <li><span class="fa-li"><i class="fab fa-css3-alt"></i></span><a data-toggle="collapse" href="#collapseExample4" role="button" aria-expanded="false" aria-controls="collapseExample4">CSS (advanced intermediate)</a></li>
               <div class="collapse" id="collapseExample4" background-color="#212530">
                 <div class="card card-body">
                   CSS is like the fancy wallpaper added to a building where html is the blank wall and framework, CSS is what makes it look fancy nad nice. To see some of my work with CSS it'd be on <a href="https://github.com/punctuations" target="_blank">Github</a>.
                 </div>
               </div>
-        </ul>
+              <li><span class="fa-li"><i class="fas fa-angle-right"></i></span><a href="two">Page 2</a></li>
+          </ul>
     </main>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
