--- a/about/index.html
+++ b/about/index.html
@@ -15,6 +15,7 @@
   <meta name="theme-color" content="#292e3a" />
     <title>infinite space</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="../css/stylesheet.css" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.10.1/css/all.css" rel="stylesheet">
 </head>
@@ -26,12 +27,19 @@
         <ul class="fa-ul">
             <li><span class="fa-li"><i class="fas fa-arrow-left"></i></span><a href="..">go back</a>
             <li><span class="fa-li"><i class="fas fa-music"></i></span><a href="https://www.youtube.com/watch?v=yXQViqx6GMY" alt="change my mind." target="_blank">Christmas music is good all year 'round</a>
-            <li><span class="fa-li"><i class="fas fa-calendar"></i></span><a
-                    href="https://bit.ly/2O3QEnd" alt="awaiting your simple click." target="_blank">time and date this was made</a></li>
+            <li><span class="fa-li"><i class="fas fa-calendar"></i></span><a data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">time and date this was made</a></li>
+            <div class="collapse" id="collapseExample" background-color="#212530">
+              <div class="card card-body">
+                This site was created 2019-12-21! That's the 21st night of December, 2019!
+              </div>
+            </div>
             <li><span class="fa-li"><i class="fas fa-copyright"></i></span><a
                     href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">This work is licensed under creative commons</a></li>
         </ul>
     </main>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 
 </html>
