--- a/about/index.html
+++ b/about/index.html
@@ -33,7 +33,7 @@
                 This site was created 2019-12-21! That's the 21st night of December, 2019!
               </div>
             </div>
-            <li><span class="fa-li"><i class="fas fa-copyright"></i></span><a
+            <li><span class="fa-li"><i class="fab fa-creative-commons"></i></span><a
                     href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">This work is licensed under creative commons</a></li>
         </ul>
     </main>
