adapted to new license

--- a/about/index.html
+++ b/about/index.html
@@ -35,6 +35,8 @@
             </div>
             <li><span class="fa-li"><i class="fab fa-creative-commons"></i></span><a
                     href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">This work is licensed under creative commons</a></li>
+                    <li><span class="fa-li"><i class="fas fa-copyright"></i></span><a
+                            href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">This work is licensed under the GNU General Public License, version 3</a></li>
         </ul>
     </main>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
