--- a/about/index.html
+++ b/about/index.html
@@ -11,6 +11,7 @@
   <meta property="og:title" content="( ͡° ͜ʖ ͡°)">
   <meta property="og:description" content="home sweet home.">
   <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Punctuation">
   <meta name="author" content="<insert dad joke here>">
   <meta name="theme-color" content="#292e3a" />
     <title>infinite space</title>
@@ -33,10 +34,18 @@
                 This site was created 2019-12-21! That's the 21st night of December, 2019!
               </div>
             </div>
-            <li><span class="fa-li"><i class="fab fa-creative-commons"></i></span><a
-                    href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">This work is licensed under creative commons</a></li>
-                    <li><span class="fa-li"><i class="fas fa-copyright"></i></span><a
-                            href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">This work is licensed under the GNU General Public License, version 3</a></li>
+            <li><span class="fa-li"><i class="fab fa-creative-commons"></i></span><a rel="license" data-toggle="collapse" href="#collapseExample1" role="button" aria-expanded="false" aria-controls="collapseExample1">Creative Commons License info</a></li>
+            <div class="collapse" id="collapseExample1" background-color="#212530">
+              <div class="card card-body">
+                This site is licensed under the <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons</a> Attribution-NonCommercial-ShareAlike 4.0 International License.
+              </div>
+            </div>
+            <li><span class="fa-li"><i class="fas fa-copyright"></i></span><a rel="license" data-toggle="collapse" href="#collapseExample2" role="button" aria-expanded="false" aria-controls="collapseExample2">GNU General Public License info</a></li>
+            <div class="collapse" id="collapseExample2" background-color="#212530">
+              <div class="card card-body">
+                This site is licensed under the <a href="https://www.gnu.org/licenses/gpl-3.0.html">GNU General Public License</a>, version 3
+              </div>
+            </div>
         </ul>
     </main>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
