--- a/404.html
+++ b/404.html
@@ -14,6 +14,7 @@ permalink: /404.html
     <meta property="og:title" content="(͠≖ ͜ʖ͠≖)">
     <meta property="og:description" content="ah yes 404.">
     <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Punctuation 404">
     <meta name="author" content="<insert dad joke here>">
     <meta name="theme-color" content="#292e3a" />
     <title>infinite space</title>
@@ -27,7 +28,7 @@ permalink: /404.html
         <h1 class="typewriter" align="center">just stop</h1>
         <p align="center">the confused programmer?</p>
         <ul class="fa-ul">
-            <li><span class="fa-li"><i class="fas fa-arrow-left"></i></span><a href="index.html">go back</a></li>
+            <li><span class="fa-li"><i class="fas fa-arrow-left"></i></span><a href="..">go back</a>
             <p align="center">Sorry buddy but it looks like you hit a dead end, I don't know how you got here, but you did. 404? Looks like the requested denstination is not avaliable or does not exist.</p>
         </ul>
     </main>
