--- a/contact/index.html
+++ b/contact/index.html
@@ -11,6 +11,7 @@
   <meta property="og:title" content="( ͡° ͜ʖ ͡°)">
   <meta property="og:description" content="home sweet home.">
   <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Punctuation">
   <meta name="author" content="<insert dad joke here>">
   <meta name="theme-color" content="#292e3a" />
     <title>infinite space</title>
