--- a/never/index.html
+++ b/never/index.html
@@ -12,6 +12,7 @@
   <meta property="og:title" content="（╯°□°）╯︵ ( ͜。 ͡ʖ ͜。)">
   <meta property="og:description" content="uh oh.">
   <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Punctuation">
   <meta name="author" content="rick...">
   <meta name="theme-color" content="#292e3a" />
     <title>infinite space</title>
