--- a/its/a/trap/index.html
+++ b/its/a/trap/index.html
@@ -7,12 +7,12 @@
   <link rel="icon" href="../icon/favicon.ico">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-  <meta name="description" content=">:(">
-  <meta property="og:title" content="（╯°□°）╯︵ ( ͜。 ͡ʖ ͜。)">
-  <meta property="og:description" content="uh oh.">
+  <meta name="description" content="take evasive action!">
+  <meta property="og:title" content="ಠ_ಠ">
+  <meta property="og:description" content="there's too many of them!">
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="Punctuation">
-  <meta name="author" content="rick...">
+  <meta name="author" content="Admiral Ackbar">
   <meta name="theme-color" content="#292e3a" />
     <title>infinite space</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700" rel="stylesheet">
