--- a/404.html
+++ b/404.html
@@ -29,7 +29,7 @@ permalink: /404.html
         <p align="center">the confused programmer?</p>
         <ul class="fa-ul">
             <li><span class="fa-li"><i class="fas fa-arrow-left"></i></span><a href="..">go back</a>
-            <p align="center">Sorry buddy but it looks like you hit a dead end, I don't know how you got here, but you did. 404? Looks like the requested denstination is not avaliable or does not exist.</p>
+            <p align="center" class="errortxt">Sorry buddy but it looks like you hit a dead end, I don't know how you got here, but you did. 404? Looks like the requested denstination is not avaliable or does not exist.</p>
         </ul>
     </main>
 </body>
