--- a/its/index.html
+++ b/its/index.html
@@ -18,7 +18,7 @@ fifteen-->
     <meta name="theme-color" content="#292e3a" />
     <title>infinite space</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700" rel="stylesheet">
-    <link href="../css/stylesheet.css" rel="stylesheet">
+    <link href="css/stylesheet.css" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.10.1/css/all.css" rel="stylesheet">
 </head>
 
@@ -28,7 +28,7 @@ fifteen-->
         <p align="center">the confused programmer?</p>
         <ul class="fa-ul">
             <li><span class="fa-li"><i class="fas fa-arrow-left"></i></span><a href="..">go back</a>
-            <p align="center">Sorry buddy but it looks like you hit a dead end, I don't know how you got here, but you did. 404? Looks like the requested denstination is not avaliable or does not exist.</p>
+            <p align="center" class="errortxt">Sorry buddy but it looks like you hit a dead end, I don't know how you got here, but you did. 404? Looks like the requested denstination is not avaliable or does not exist.</p>
         </ul>
     </main>
 </body>
