--- a/its/index.html
+++ b/its/index.html
@@ -18,7 +18,7 @@ fifteen-->
     <meta name="theme-color" content="#292e3a" />
     <title>infinite space</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700" rel="stylesheet">
-    <link href="css/stylesheet.css" rel="stylesheet">
+    <link href="../css/stylesheet.css" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.10.1/css/all.css" rel="stylesheet">
 </head>
 
