--- a/its/a/index.html
+++ b/its/a/index.html
@@ -1,4 +1,4 @@
-<!-- punctuation.cf/its/not-->
+<!-- Woah, this is a really cool place huh? Mr. Inspect element (or miss, I don't discriminate)-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -16,7 +16,7 @@
     <meta name="theme-color" content="#292e3a" />
     <title>infinite space</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700" rel="stylesheet">
-    <link href="../css/stylesheet.css" rel="stylesheet">
+    <link href="../../css/stylesheet.css" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.10.1/css/all.css" rel="stylesheet">
 </head>
 
