--- a/its/not/index.html
+++ b/its/not/index.html
@@ -1,4 +1,4 @@
-<!-- punctuation.cf/its/not-->
+<!-- Woah, this is a really cool place huh? Mr. Inspect element (or miss, I don't discriminate)-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -16,17 +16,17 @@
     <meta name="theme-color" content="#292e3a" />
     <title>infinite space</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700" rel="stylesheet">
-    <link href="../css/stylesheet.css" rel="stylesheet">
+    <link href="../../css/stylesheet.css" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.10.1/css/all.css" rel="stylesheet">
 </head>
 
 <body>
     <main>
-        <h1 class="typewriter" align="center">just stop</h1>
+        <h1 class="typewriter" align="center">uhm.</h1>
         <p align="center">the confused programmer?</p>
         <ul class="fa-ul">
             <li><span class="fa-li"><i class="fas fa-arrow-left"></i></span><a href="..">go back</a>
-            <p align="center" class="errortxt">Sorry buddy but it looks like you hit a dead end, I don't know how you got here, but you did. 404? Looks like the requested denstination is not avaliable or does not exist.</p>
+            <p align="center" class="errortxt" class="bina">01101000 01110100 01110100 01110000 01110011 00111010 00101111 00101111 01111001 01101111 01110101 01110100 01110101 00101110 01100010 01100101 00101111 01101010 01001001 00111001 01101100 01001101 01010111 01110000 01011010 01101011 01101000 00110000 </p>
         </ul>
     </main>
 </body>
