--- a/experience/index.html
+++ b/experience/index.html
@@ -39,7 +39,7 @@
                   Using MS-DOS I can work my way around windows, I don't really know what else to say. The documentation is <a href="https://docs.microsoft.com/en-us/windows-server/administration/windows-commands/windows-commands" target="_blank">here</a>.</a>
                 </div>
               </div>
-            <li><span class="fa-li"><i class="fab fa-html5"></i></span><a data-toggle="collapse" href="#collapseExample2" role="button" aria-expanded="false" aria-controls="collapseExample2">HTML (advanced intermediate)</a></li>
+            <li><span class="fa-li"><i class="fab fa-html5"></i></span><a data-toggle="collapse" href="#collapseExample2" role="button" aria-expanded="false" aria-controls="collapseExample2">HTML (expert)</a></li>
               <div class="collapse" id="collapseExample2" background-color="#212530">
                 <div class="card card-body">
                   Using HTML I was able to basically layout what I'd call the framework of the website with all the text and things. An example of things I've done with this would be on <a href="https://github.com/punctuations" target="_blank">Github</a>.
