--- a/experience/two/index.html
+++ b/experience/two/index.html
@@ -36,7 +36,7 @@
             <li><span class="fa-li"><i class="fab fa-node-js"></i></span><a data-toggle="collapse" href="#collapseExample1" role="button" aria-expanded="false" aria-controls="collapseExample1">Javascript (beginner)</a></li>
               <div class="collapse" id="collapseExample1" background-color="#212530">
                 <div class="card card-body">
-                  Javascript is personally a language I really want to learn, I do know a bit about it but not too much, I do not have any work to show using it. Hopefully soon though!
+                  Javascript is personally a language I really want to learn, I do know a bit about it but not too much as I am still learning, I do not have any work to show using it. Hopefully soon though!
                 </div>
               </div>
               <li><span class="fa-li"><i class="fas fa-angle-left"></i></span><a href="..">Page 1</a></li>
