--- a/experience/index.html
+++ b/experience/index.html
@@ -54,7 +54,7 @@
             <li><span class="fa-li"><i class="fab fa-css3-alt"></i></span><a data-toggle="collapse" href="#collapseExample4" role="button" aria-expanded="false" aria-controls="collapseExample4">CSS (advanced intermediate)</a></li>
               <div class="collapse" id="collapseExample4" background-color="#212530">
                 <div class="card card-body">
-                  CSS is like the fancy wallpaper added to a building where html is the blank wall and framework, CSS is what makes it look fancy nad nice. To see some of my work with CSS it'd be on <a href="https://github.com/punctuations" target="_blank">Github</a>.
+                  CSS is like the fancy wallpaper added to a building where html is the blank wall and framework, CSS is what makes it look fancy and nice. To see some of my work with CSS it'd be on <a href="https://github.com/punctuations" target="_blank">Github</a>.
                 </div>
               </div>
               <li><span class="fa-li"><i class="fas fa-angle-right"></i></span><a href="two">Page 2</a></li>
