--- a/contact/index.html
+++ b/contact/index.html
@@ -26,7 +26,7 @@
         <p>you want to talk to me? reach me here.</p>
         <ul class="fa-ul">
             <li><span class="fa-li"><i class="fas fa-arrow-left"></i></span><a href="..">go back</a>
-            <li><span class="fa-li"><I class="fa fa-twitter"></i></span><a href="https://twitter.com/alloutofmatt">alloutofmatt</a>
+            <li><span class="fa-li"><I class="fab fa-twitter"></i></span><a href="https://twitter.com/alloutofmatt">alloutofmatt</a>
             <li><span class="fa-li"><i class="fas fa-envelope"></i></span><a href="mailto:semi@programmer.net">semi@programmer.net</a>
             <li><span class="fa-li"><i class="fab fa-discord"></i></span><a
                     href="https://discord.gg/SK53UMK" target="_blank">YetAnotherMatt#8773</a></li>
