--- a/projects/index.html
+++ b/projects/index.html
@@ -35,7 +35,7 @@
             <li><span class="fa-li"><i class="fab fa-discord"></i></span><a data-toggle="collapse" href="#collapseExample1" role="button" aria-expanded="false" aria-controls="collapseExample1">miscord (team project)</a></li>
             <div class="collapse" id="collapseExample1" background-color="#212530">
               <div class="card card-body">
-                The Miscord Project is a project that was developed during discord's <a href="https://blog.discordapp.com/discord-community-hack-week-category-winners-bd0364360f92" target="_blank">Hack Week</a>, which is the reason we made this other discord bot, Miscord has lots of features which you can see <a href="https://miscord.utile.cf/">here</a>. Miscord was made by <a href="https://github.com/bluecantcode/>blue</a>, <a href="https://github.com/iAlex11/">alex</a>, <a href="https://github.com/tilda/">tilda</a>,and <a href="https://github.com/punctuations/>me</a>.
+                The Miscord Project is a project that was developed during discord's <a href="https://blog.discordapp.com/discord-community-hack-week-category-winners-bd0364360f92" target="_blank">Hack Week</a>, which is the reason we made this other discord bot, Miscord has lots of features which you can see <a href="https://miscord.utile.cf/">here</a>. Miscord was made by <a href="https://github.com/bluecantcode/">blue</a>, <a href="https://github.com/iAlex11/">alex</a>, <a href="https://github.com/tilda/">tilda</a>,and <a href="https://github.com/punctuations/">me</a>.
               </div>
             </div>
             <li><span class="fa-li"><i class="fas fa-globe"></i></span><a
