--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 </head>
 
 <body>
+  <div id="snowflakeContainer">
+  <span class="snowflake"></span>
+  <span class="party">&#42;&#60; [party hat]</span>
     <main>
         <h1 class="typewriter">punctuation</h1>
         <p>the undetermined programmer.</p>
@@ -32,6 +35,9 @@
             <li><span class="fa-li"><i class="fas fa-info"></i></span><a href="about">info</a></li>
         </ul>
     </main>
+  </div>
+    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+    <script src="webscript/script.js"></script>
 </body>
 
 </html>
