--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta name="twitter:title" content="Punctuation">
     <meta name="author" content="<insert dad joke here>">
     <meta name="theme-color" content="#292e3a" />
+    <canvas id="snowCanvas"></canvas>
     <title>infinite space</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700" rel="stylesheet">
     <link href="css/stylesheet.css" rel="stylesheet">
@@ -24,7 +25,9 @@
 <body>
   <div id="snowflakeContainer">
   <span class="snowflake"></span>
-  <span class="party">&#42;&#60; [party hat]</span>
+  </div>
+  <p> [party hat] </p>
+  <span class="party">&#42;&#60;</span>
     <main>
         <h1 class="typewriter">punctuation</h1>
         <p>the undetermined programmer.</p>
@@ -35,7 +38,6 @@
             <li><span class="fa-li"><i class="fas fa-info"></i></span><a href="about">info</a></li>
         </ul>
     </main>
-  </div>
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <script src="webscript/script.js"></script>
 </body>
