--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
   <div id="snowflakeContainer">
   <span class="snowflake"></span>
   </div>
-  <p> [party hat] </p>
-  <span class="party">&#42;&#60;</span>
     <main>
+        <span class="subtitle"> [party hat] </span>
+        <span class="party">&#42;&#60;</span>
         <h1 class="typewriter">punctuation</h1>
         <p>the undetermined programmer.</p>
         <ul class="fa-ul">
