added new date mechanics

--- a/404.html
+++ b/404.html
@@ -17,6 +17,7 @@ permalink: /404.html
     <meta name="twitter:title" content="Punctuation 404">
     <meta name="author" content="<insert dad joke here>">
     <meta name="theme-color" content="#292e3a" />
+    <canvas id="snowCanvas"></canvas>
     <title>infinite space</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700" rel="stylesheet">
     <link href="css/stylesheet.css" rel="stylesheet">
@@ -24,7 +25,12 @@ permalink: /404.html
 </head>
 
 <body>
+  <div id="snowflakeContainer">
+  <span class="snowflake"></span>
+  </div>
     <main>
+      <span class="subtitle"> [party hat] </span>
+      <span class="party">&#42;&#60;</span>
         <h1 class="typewriter" align="center">just stop</h1>
         <p align="center">the confused programmer?</p>
         <ul class="fa-ul">
@@ -32,6 +38,8 @@ permalink: /404.html
             <p align="center" class="errortxt">Sorry buddy but it looks like you hit a dead end, I don't know how you got here, but you did. 404? Looks like the requested denstination is not avaliable or does not exist.</p>
         </ul>
     </main>
+    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+    <script src="webscript/script.js"></script>
 </body>
 
 </html>
