--- a/contact/index.html
+++ b/contact/index.html
@@ -14,14 +14,20 @@
   <meta name="twitter:title" content="Punctuation">
   <meta name="author" content="<insert dad joke here>">
   <meta name="theme-color" content="#292e3a" />
-    <title>infinite space</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700" rel="stylesheet">
-    <link href="../css/stylesheet.css" rel="stylesheet">
-    <link href="https://use.fontawesome.com/releases/v5.10.1/css/all.css" rel="stylesheet">
+  <canvas id="snowCanvas"></canvas>
+  <title>infinite space</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700" rel="stylesheet">
+  <link href="../css/stylesheet.css" rel="stylesheet">
+  <link href="https://use.fontawesome.com/releases/v5.10.1/css/all.css" rel="stylesheet">
 </head>
 
 <body>
+  <div id="snowflakeContainer">
+  <span class="snowflake"></span>
+  </div>
     <main>
+      <span class="subtitle"> [party hat] </span>
+      <span class="party">&#42;&#60;</span>
       <h1 class="typewriter">punctuation</h1>
         <p>you want to talk to me? reach me here.</p>
         <ul class="fa-ul">
@@ -36,6 +42,8 @@
               href="https://github.com.punctuations" target="_blank">punctuations</a></li>
         </ul>
     </main>
+    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+    <script src="webscript/script.js"></script>
 </body>
 
 </html>
