--- a/experience/two/index.html
+++ b/experience/two/index.html
@@ -14,6 +14,7 @@
     <meta name="twitter:title" content="Punctuation">
     <meta name="author" content="<insert dad joke here>">
     <meta name="theme-color" content="#292e3a" />
+    <canvas id="snowCanvas"></canvas>
     <title>infinite space</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -22,7 +23,12 @@
 </head>
 
 <body>
+  <div id="snowflakeContainer">
+  <span class="snowflake"></span>
+  </div>
     <main>
+      <span class="subtitle"> [party hat] </span>
+      <span class="party">&#42;&#60;</span>
         <h1 class="typewriter">punctuation</h1>
         <p>languages</p>
         <ul class="fa-ul">
@@ -45,6 +51,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="webscript/script.js"></script>
 </body>
 
 </html>
