fixed link to new date mechanics in sub-pages

--- a/contact/index.html
+++ b/contact/index.html
@@ -43,7 +43,7 @@
         </ul>
     </main>
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-    <script src="webscript/script.js"></script>
+    <script src="../webscript/script.js"></script>
 </body>
 
 </html>
