fixed locations of new date mechanics

--- a/projects/index.html
+++ b/projects/index.html
@@ -26,8 +26,8 @@
   <span class="snowflake"></span>
   </div>
     <main>
-      <span class="subtitle"> [party hat] </span>
-      <span class="party">&#42;&#60;</span>
+      <span class="subtitle-proj"> [party hat] </span>
+      <span class="party-proj">&#42;&#60;</span>
         <h1 class="typewriter">punctuation</h1>
         <p>see my projects here</p>
         <ul class="fa-ul">
