--- a/about/index.html
+++ b/about/index.html
@@ -27,8 +27,8 @@
   <span class="snowflake"></span>
   </div>
     <main>
-      <span class="subtitle"> [party hat] </span>
-      <span class="party">&#42;&#60;</span>
+      <span class="subtitle-sub"> [party hat] </span>
+      <span class="party-sub">&#42;&#60;</span>
       <h1 class="typewriter">punctuation</h1>
         <p>hey, you seem pretty cool, here's some info.</p>
         <ul class="fa-ul">
