--- a/experience/index.html
+++ b/experience/index.html
@@ -27,8 +27,8 @@
   <span class="snowflake"></span>
   </div>
     <main>
-      <span class="subtitle"> [party hat] </span>
-      <span class="party">&#42;&#60;</span>
+      <span class="subtitle-exp"> [party hat] </span>
+      <span class="party-exp">&#42;&#60;</span>
         <h1 class="typewriter">punctuation</h1>
         <p>languages</p>
         <ul class="fa-ul">
