--- a/experience/two/index.html
+++ b/experience/two/index.html
@@ -39,10 +39,16 @@
                   I am not well versed in the world of linux and am still learning!
                 </div>
               </div>
-            <li><span class="fa-li"><i class="fab fa-node-js"></i></span><a data-toggle="collapse" href="#collapseExample1" role="button" aria-expanded="false" aria-controls="collapseExample1">Javascript (beginner)</a></li>
+            <li><span class="fa-li"><i class="fab fa-node-js"></i></span><a data-toggle="collapse" href="#collapseExample1" role="button" aria-expanded="false" aria-controls="collapseExample1">Javascript (intermediate)</a></li>
               <div class="collapse" id="collapseExample1" background-color="#212530">
                 <div class="card card-body">
-                  Javascript is personally a language I really want to learn, I do know a bit about it but not too much as I am still learning, I do not have any work to show using it. Hopefully soon though!
+                  Javascript is personally a language I really want to learn, I do know a bit about it but not too much as I am still learning, if you would like to see what I have done you can see the code on <a href="https://github.com/punctuations">github</a>.
+                </div>
+              </div>
+            <li><span class="fa-li"><i class="fa fa-terminal"></i></span><a data-toggle="collapse" href="#collapseExample1" role="button" aria-expanded="false" aria-controls="collapseExample1">JQuery (intermediate)</a></li>
+              <div class="collapse" id="collapseExample1" background-color="#212530">
+                <div class="card card-body">
+                  If you do not already know; JQuery is a JavaScript library. This means that it is a lot of the same stuff and integrates with JavaScript. If you want to see some of my JQuery work you can see it on <a href="https://github.com/punctuations">github</a>.
                 </div>
               </div>
               <li><span class="fa-li"><i class="fas fa-angle-left"></i></span><a href="..">Page 1</a></li>
