--- a/404.html
+++ b/404.html
@@ -28,6 +28,7 @@ permalink: /404.html
   <div id="snowflakeContainer">
   <span class="snowflake"></span>
   </div>
+    <span class="spooky">ʎʞoods /╲/( ͡° ͡° ͜ل͜ ͡° ͡°)/\╱\</span>
     <main>
       <span class="subtitle"> [party hat] </span>
       <span class="party">&#42;&#60;</span>
