--- a/about/index.html
+++ b/about/index.html
@@ -26,6 +26,7 @@
   <div id="snowflakeContainer">
   <span class="snowflake"></span>
   </div>
+    <span class="spooky">ʎʞoods /╲/( ͡° ͡° ͜ل͜ ͡° ͡°)/\╱\</span>
     <main>
       <span class="subtitle-sub"> [party hat] </span>
       <span class="party-sub">&#42;&#60;</span>
