--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <div id="snowflakeContainer">
   <span class="snowflake"></span>
   </div>
+  <span class="spooky">ʎʞoods /╲/( ͡° ͡° ͜ل͜ ͡° ͡°)/\╱\</span>
     <main>
       <span class="subtitle"> [party hat] </span>
       <span class="party">&#42;&#60;</span>
