--- a/experience/index.html
+++ b/experience/index.html
@@ -61,7 +61,7 @@
                   CSS is like the fancy wallpaper added to a building where html is the blank wall and framework, CSS is what makes it look fancy and nice. To see some of my work with CSS it'd be on <a href="https://github.com/punctuations" target="_blank">Github</a>.
                 </div>
               </div>
-              <li><span class="fa-li"><i class="fas fa-angle-right"></i></span><a href="two">Page 2</a></li>
+              <li><span class="fa-li"><i class="fas fa-angle-right"></i></span><a href="two">page 2</a></li>
           </ul>
     </main>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
