--- a/experience/two/index.html
+++ b/experience/two/index.html
@@ -49,7 +49,7 @@
                   If you do not already know; JQuery is a JavaScript library. This means that it is a lot of the same stuff and integrates with JavaScript. If you want to see some of my JQuery work you can see it on <a href="https://github.com/punctuations">github</a>.
                 </div>
               </div>
-              <li><span class="fa-li"><i class="fas fa-angle-left"></i></span><a href="..">Page 1</a></li>
+              <li><span class="fa-li"><i class="fas fa-angle-left"></i></span><a href="..">page 1</a></li>
         </ul>
     </main>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
