fixed github link

--- a/contact/index.html
+++ b/contact/index.html
@@ -37,7 +37,7 @@
             <li><span class="fa-li"><i class="fab fa-reddit"></i></span><a
                     href="https://reddit.com/u/yetanothersemicolon" target="_blank">/u/yetanothersemicolon</a></li>
             <li><span class="fa-li"><i class="fab fa-github"></i></span><a
-              href="https://github.com.punctuations" target="_blank">punctuations</a></li>
+              href="https://github.com/punctuations" target="_blank">punctuations</a></li>
         </ul>
     </main>
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
